# geodykes-fastapi

./: .gitignore  .gitmodules  LICENSE  alembic.ini  docker-compose.yml  export-env.sh  populate_db.py  pyproject.toml  pytest.ini  readme.md
.github/ISSUE_TEMPLATE/: test-case.md
ETL/: etl.py  populate_db_trial.py
app/: application.py  dependencies.py  settings.py
app/db/: deps.py  models.py
app/factory/: objects_factory.py  objects_inmemory_data.py
app/repositories/: database_repository.py  inmemory_repository.py  repository_interface.py
dashboard/: dash-app.py  pyproject.toml  test_sdk.py
dashboard/geodykes_dash/: dash-app.py  data.py  settings.py
dashboard/services/: example.py  interface.py  manager.py  openapi.py
dev-notes/: database-design.md  db_design_notes.md  dev-approach.md  dev-setup.md  pipeline.md  poetry-setup.md  project-breakdown.md  project-structure.md
migrations/: env.py
migrations/versions/: 2024-06-11_debugging_alembic.py  2024-06-12_fix_id_issues.py  2024-06-18_added_crossection.py  2024-07-22_added_sensors_readings_and_sensor_types.py  2024-07-22_complete_model_fully_tested_with_pytest.py  2024-07-31_adding_sensor_dependency_in_readings.py  2024-07-31_adding_sensor_dependency_in_readings_.py  2024-08-06_location_in_topology_points_now_to_.py  2024-08-09_init.py
sdk/: README.md  pyproject.toml  setup.py
sdk/.openapi-generator/: FILES
sdk/docs/: Card.md  CardCreate.md  Cards.md  Deck.md  DeckCreate.md  Decks.md  (+5 more)
tests/: acceptance_criteria.md  check_connect_manual.py  conftest.py  repository.py  test_connection.py
(+37 files in other folders)
